--- a/_includes/resume/career-profile.html
+++ b/_includes/resume/career-profile.html
@@ -9,7 +9,7 @@
   </h2>
 
     <div class="summary">
-      {% for entry in site.data.resume.career %}
+      {% for entry in site.data.resume.career-profile %}
         <p>{{ entry }}</p>
       {% endfor %}
     </div><!--//summary-->
