--- a/assets/css/resume.scss
+++ b/assets/css/resume.scss
@@ -3,3 +3,4 @@
 
 @import "../assets/resume/scss/{% if site.resume.style %}{{ site.resume.style}}.scss{% else %}orbit-1.scss{% endif %}";
 @import "resume/custom";
+@import "resume/custom-print";
